--- a/Index.html
+++ b/Index.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>WTW Project</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="./Interview.js"></script>
 </head>
 <body>
 
-<div class="container">
-  <h1>My First Bootstrap Page</h1>
-  <p>This is some text.</p> 
-</div>
+  <div id="page-wrapper">
+
+		<h1>Text File Reader</h1>
+		<div>
+			Select a csv file: 
+			<input type="file" id="fileInput" accept=".csv,text/csv" onchange="triggerValidation(this)">
+		</div>
+		<pre id="fileDisplayArea"><pre>
+
+	</div>
 
 </body>
 </html>
+
+<style>
+  html {
+  font-family: Arial, sans-serif;
+  font-size: 100%;
+}
+</style>
