--- a/Index.html
+++ b/Index.html
@@ -10,10 +10,10 @@
 
   <div id="page-wrapper">
 
-		<h1>Text File Reader</h1>
+		<h1>CSV Parse for WTW</h1>
 		<div>
-			Select a csv file: 
-			<input type="file" id="fileInput" accept=".csv,text/csv" onchange="triggerValidation(this)">
+			Select a .csv file: 
+			<input type="file" id="fileInput" accept=".csv" onchange="triggerValidation(this)">
 		</div>
 		<pre id="fileDisplayArea"><pre>
 
